--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -1,16 +1,45 @@
-<div>
-  <input [(ngModel)]="newAppointmentTitle" placeholder="Appointment desc" />
-  <input
-    [(ngModel)]="newAppointmentDate"
-    type="date"
-    placeholder="Appointment date"
-  />
-  <button (click)="addAppointment()">Add</button>
+<h2 class="text-center mt-5">Create new appointment</h2>
+<div class="d-flex justify-content-center">
+  <div class="row g-3 p-3">
+    <div class="col-md-5">
+      <input
+        [(ngModel)]="newAppointmentTitle"
+        class="form-control"
+        placeholder="Appointment desc"
+      />
+    </div>
+    <div class="col-md-5">
+      <input
+        [(ngModel)]="newAppointmentDate"
+        class="form-control"
+        type="date"
+        placeholder="Appointment date"
+      />
+    </div>
+    <div class="col-md-2 d-flex align-items-end">
+      <button (click)="addAppointment()" class="btn btn-primary w-100">
+        Add
+      </button>
+    </div>
+  </div>
 </div>
+<h2 class="text-center mt-5">Appointment List</h2>
 
-<ul>
-  <li *ngFor="let appointment of appointments; index as i">
-    {{ appointment.title }} {{ appointment.date | date : "dd.MM.yyyy" }}
-    <button (click)="deleteAppointment(i)">Remove</button>
-  </li>
-</ul>
+<div class="d-flex justify-content-center">
+  <ul class="list-unstyled w-50">
+    <li
+      *ngFor="let appointment of appointments; index as i"
+      class="border p-3 my-2 rounded"
+    >
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <h5>{{ appointment.title }}</h5>
+          <p>{{ appointment.date | date : "dd.MM.yyyy" }}</p>
+        </div>
+        <button (click)="deleteAppointment(i)" class="btn btn-danger">
+          Remove
+        </button>
+      </div>
+    </li>
+  </ul>
+</div>
